--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Score:
         <div id="scoreBoard"></div>
       </div>
-      <button id="start">Start</button>
+      <button id="startButton">Start</button>
     </div>
     <div id="gameOver">Game Over</div>
 
