--- a/index.html
+++ b/index.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,900;1,400&family=Share+Tech+Mono&display=swap");
-    </style>
     <title>Snake Game</title>
   </head>
   <body>
-    <div id="board"></div>
-    <div class="boardInfo">
-      <div>
-        Score:
-        <div id="scoreBoard"></div>
-      </div>
-      <button id="startButton">Start</button>
-    </div>
-    <div id="gameOver">Game Over</div>
+    <canvas id="canvas" width="480" height="480"></canvas>
 
     <script src="app.js" defer></script>
   </body>
